--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{/menuprincipal}">
-                <h1><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="100px">   fatloss</h1>
+                <h1 class="display-1"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="120px">   fatloss</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
         <div class="row d-flex align-items-center">
             <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
             justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-                <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="80px">
+                <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="140px">
             </div>
             <div class="col-sm-5 d-flex flex-column justify-content-star">
                 <h4>TP Taller Web I: fatloss</h4>
