Update alimentos y recetas

--- a/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
@@ -71,21 +71,19 @@
     </div>
 </div>
 <div class="container mt-4">
-    <div>
         <div class="conEncabezado">
             <div class="conTitulo"> <!--Titulo -->
                 <h1>Alimentos</h1>
-                <p>Encuentra alimentos de sus marcas favoritas</p>
+                <p>Encuentre alimentos de sus marcas favoritas</p>
             </div>
             <div class="contenedor-busqueda">
-                <label class="buscar-receta"> Encuentra el alimento que buscas!
+                <label class="buscar-receta"> Encuentre el alimento que buscas!
                     <div>
                         <input class="busqueda-alimento" name="busqueda-alimento" type="text">
                         <button type="submit">buscar</button>
                     </div>
                 </label>
             </div>
-        </div>
         </div>
         <div class="conAlimentosComunes">
             <div>
@@ -151,8 +149,6 @@
                 </div>
             </div>
         </div>
-    </div>
-<!--footer-->
 <footer class="container-fluid mt-auto py-2">
     <div class="row d-flex align-items-center">
         <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
@@ -172,7 +168,5 @@
         </div>
     </div>
 </footer>
-
-</div>
 </body>
 </html>
