--- a/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Alimentos</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
 
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,46 +17,10 @@
 </head>
 <body>
 <!--header/nav-->
-<nav class="navbar navbar-expand-sm navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/menuprincipal}">
-            <h1><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="100px">   fatloss</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="${usuario}"></a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item active" th:href="@{#}">Perfil</a></li>
-                        <li><a class="dropdown-item" th:href="@{#}">Configuracion</a></li>
-                        <li><a class="dropdown-item" th:href="@{#}">Notificaciones</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{#}">Dieta</a></li>
-                        <li><a class="dropdown-item" th:href="@{#}">Alimentacion</a></li>
-                        <li><a class="dropdown-item" th:href="@{#}">Ejercicios</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Historial</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" th:href="@{#}">Mi historial de Peso</a></li>
-                        <li><a class="dropdown-item" th:href="@{#}">Libro de Cocina</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/inicio}">Salir</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+
+<div th:replace="navbar :: navbar"></div>
+
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -153,26 +115,10 @@
         </div>
     </div>
 <!--footer-->
-<footer class="container-fluid mt-auto py-2">
-    <div class="row d-flex align-items-center">
-        <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
-            justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-            <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="80px">
-        </div>
-        <div class="col-sm-5 d-flex flex-column justify-content-star">
-            <h4>TP Taller Web I: fatloss</h4>
-            <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-            <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
-        </div>
-        <div class="col-sm-5 d-flex flex-column justify-content-star">
-            <h5>Integrantes: </h5>
-            <p>Rodolfo Gutierrez - Gonzalo Flores</p>
-            <p>Milagros Chavez - Kevin Llombart</p>
-            <p>Joaquin Paiva</p>
-        </div>
-    </div>
-</footer>
+<div th:replace="footer :: footer"></div>
 
-</div>
+
+<script th:src="@{/webjars/bootstrap/5.2.0/js/bootstrap.bundle.min.js}"></script>
+
 </body>
 </html>
