--- a/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
@@ -72,7 +72,7 @@
             <h3>Mi FatLoss <3</h3>
             <div class="list-group text-sm p-1">
                 <span>Calendario de dieta</span>
-                <a th:href="@{/midiario/dieta}" class="list-group-item list-group-item-action">Dieta</a>
+                <a th:href="@{/calendarioDieta}" class="list-group-item list-group-item-action">Dieta</a>
                 <a th:href="@{/midiario/alimentos}" class="list-group-item list-group-item-action">Alimentos</a>
                 <a th:href="@{/midiario/ejercicio}" class="list-group-item list-group-item-action">Ejercicio</a>
 
